# rust-opentelemetry-datadog-lambda

./: package-lock.json  package.json
infra/config/: infra-options.ts
infra/lib/: main-stack.ts
infra/lib/functions/: rust-otel-api.ts
web-handler/: Cargo.toml
web-handler/src/: main.rs
