[package]
name = "rust-lambda"
version = "0.1.0"
edition = "2021"


# [dependencies]
# lambda_http = "0.12.0"
# opentelemetry = { version = "0.23.0" }
# opentelemetry-datadog = { version = "0.11.0", features = ["reqwest-client", "intern-ahash"] }
# opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "trace"] }
# tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
# 
# tokio = { version = "1", features = ["macros"] }
# tracing-opentelemetry = { version = "0.24.0" }

[dependencies]
lambda_http = "0.12.0"

tokio = { version = "1", features = ["macros"] }

tracing-subscriber = {}
opentelemetry = "0.23.0"
opentelemetry-datadog = { version = "0.11.0", features = ["reqwest-client"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "trace"] }
opentelemetry-http = { version = "0.12", features = ["reqwest"] }
opentelemetry-stdout = "0.4.0"
tracing-opentelemetry = "0.24.0"
reqwest = { version = "0.12.4", features = [
  "json",
  "http2",
  "rustls-tls",
], default-features = false }
